@@ -1,84 +1,76 @@
 package kitchenpos.application;
 
-import kitchenpos.dao.MenuDao;
-import kitchenpos.dao.OrderDao;
-import kitchenpos.dao.OrderLineItemDao;
-import kitchenpos.dao.OrderTableDao;
+import java.util.List;
+import kitchenpos.domain.Menu;
 import kitchenpos.domain.Order;
-import kitchenpos.domain.OrderLineItem;
 import kitchenpos.domain.OrderStatus;
 import kitchenpos.domain.OrderTable;
-import kitchenpos.support.FixtureFactory;
+import kitchenpos.dto.OrderLineItemRequest;
+import kitchenpos.dto.OrderLineItemResponse;
+import kitchenpos.dto.OrderRequest;
+import kitchenpos.dto.OrderResponse;
+import kitchenpos.dto.OrderStatusChangeRequest;
+import kitchenpos.repository.MenuRepository;
+import kitchenpos.repository.OrderRepository;
+import kitchenpos.repository.OrderTableRepository;
+import kitchenpos.support.DataCleaner;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-
-import java.time.LocalDateTime;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.assertj.core.api.SoftAssertions.assertSoftly;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.BDDMockito.given;
 
-@ExtendWith(MockitoExtension.class)
+@SpringBootTest
 class OrderServiceTest {
 
-    @Mock
-    private MenuDao menuDao;
+    @Autowired
+    private DataCleaner dataCleaner;
 
-    @Mock
-    private OrderDao orderDao;
+    @Autowired
+    private OrderRepository orderRepository;
 
-    @Mock
-    private OrderLineItemDao orderLineItemDao;
+    @Autowired
+    private OrderTableRepository orderTableRepository;
 
-    @Mock
-    private OrderTableDao orderTableDao;
+    @Autowired
+    private MenuRepository menuRepository;
 
-    @InjectMocks
+    @Autowired
     private OrderService orderService;
+
+    @BeforeEach
+    void setUp() {
+        dataCleaner.clear();
+    }
 
     @DisplayName("주문을 생성한다.")
     @Test
     void create_order() {
         // given
-        final List<OrderLineItem> orderLineItems = List.of(
-                FixtureFactory.savedOrderLineItem(1L, null, 1L, 1),
-                FixtureFactory.savedOrderLineItem(2L, null, 2L, 2));
-        final Order forSaveOrder = FixtureFactory.forSaveOrder(1L, orderLineItems);
-        final List<OrderLineItem> savedorderLineItems = List.of(
-                FixtureFactory.savedOrderLineItem(1L, 1L, 1L, 1),
-                FixtureFactory.savedOrderLineItem(2L, 1L, 2L, 2));
-        final Order savedOrder = FixtureFactory.savedOrder(1L, 1L, OrderStatus.COOKING.name(), LocalDateTime.now(), savedorderLineItems);
+        final OrderTable savedOrderTable = orderTableRepository.save(OrderTable.forSave(5));
+        final Menu savedMenu = menuRepository.save(Menu.forSave("메뉴", 10000, 1L));
 
-
-        given(menuDao.countByIdIn(any()))
-                .willReturn(2L);
-        given(orderTableDao.findById(any()))
-                .willReturn(Optional.of(new OrderTable() {{
-                    setId(1L);
-                    setEmpty(false);
-                }}));
-        given(orderDao.save(forSaveOrder))
-                .willReturn(savedOrder);
+        final OrderRequest orderRequest = new OrderRequest(savedOrderTable.getId(),
+            List.of(new OrderLineItemRequest(savedMenu.getId(), 3)));
 
         // when
-        final Order result = orderService.create(forSaveOrder);
+        final OrderResponse result = orderService.create(orderRequest);
 
         // then
         assertSoftly(softly -> {
-            softly.assertThat(result.getId()).isEqualTo(savedOrder.getId());
-            softly.assertThat(result.getOrderedTime()).isEqualTo(savedOrder.getOrderedTime());
-            softly.assertThat(result.getOrderStatus()).isEqualTo(savedOrder.getOrderStatus());
-            softly.assertThat(result.getOrderLineItems()).isEqualTo(savedOrder.getOrderLineItems());
-            softly.assertThat(result.getOrderTableId()).isEqualTo(savedOrder.getOrderTableId());
+            softly.assertThat(result.getId()).isEqualTo(1L);
+            softly.assertThat(result.getOrderStatus()).isEqualTo(OrderStatus.COOKING.name());
+            softly.assertThat(result.getOrderTableId()).isEqualTo(savedOrderTable.getId());
+        });
+
+        final List<OrderLineItemResponse> orderLineItems = result.getOrderLineItems();
+        assertSoftly(softly -> {
+            softly.assertThat(orderLineItems).hasSize(1);
+            softly.assertThat(orderLineItems.get(0).getOrderId()).isEqualTo(result.getId());
         });
     }
 
@@ -86,127 +78,96 @@ class OrderServiceTest {
     @Test
     void create_order_fail_with_orderLineItem_empty() {
         // given
-        final Order wrongOrder = FixtureFactory.forSaveOrder(1L, Collections.emptyList());
+        final OrderTable savedOrderTable = orderTableRepository.save(OrderTable.forSave(5));
+        final List<OrderLineItemRequest> emptyOrderLineItemRequest = List.of();
+        final OrderRequest wrongOrderRequest = new OrderRequest(savedOrderTable.getId(),
+            emptyOrderLineItemRequest);
 
         // when
         // then
-        assertThatThrownBy(() -> orderService.create(wrongOrder))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> orderService.create(wrongOrderRequest))
+            .isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("주문 상품의 개수와 주문 내역의 개수가 다르면 주문을 생성할 수 없다.")
     @Test
     void create_order_fail_with_wrong_orderLineItem_count() {
         // given
-        final List<OrderLineItem> orderLineItems = List.of(
-                FixtureFactory.savedOrderLineItem(1L, null, 1L, 1),
-                FixtureFactory.savedOrderLineItem(2L, null, 2L, 2));
-        final Order wrongOrder = FixtureFactory.forSaveOrder(1L, orderLineItems);
-
-        given(menuDao.countByIdIn(any()))
-                .willReturn(1L);
+        final OrderTable savedOrderTable = orderTableRepository.save(OrderTable.forSave(5));
+        final Menu savedMenu = menuRepository.save(Menu.forSave("메뉴", 10000, 1L));
+        final List<OrderLineItemRequest> duplicatedContainMenu = List.of(
+            new OrderLineItemRequest(savedMenu.getId(), 3),
+            new OrderLineItemRequest(savedMenu.getId(), 3));
+        final OrderRequest wrongOrderRequest = new OrderRequest(savedOrderTable.getId(),
+            duplicatedContainMenu);
 
         // when
         // then
-        assertThatThrownBy(() -> orderService.create(wrongOrder))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> orderService.create(wrongOrderRequest))
+            .isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("주문 테이블이 존재하지 않으면 주문을 생성할 수 없다.")
     @Test
     void create_order_fail_with_not_found_orderTable() {
         // given
-        final List<OrderLineItem> orderLineItems = List.of(
-                FixtureFactory.savedOrderLineItem(1L, null, 1L, 1),
-                FixtureFactory.savedOrderLineItem(2L, null, 2L, 2));
-        final Order wrongOrder = FixtureFactory.forSaveOrder(1L, orderLineItems);
+        final Long wrongOrderTableId = 0L;
+        final Menu savedMenu = menuRepository.save(Menu.forSave("메뉴", 10000, 1L));
 
-        given(menuDao.countByIdIn(any()))
-                .willReturn(2L);
-
-        given(orderTableDao.findById(any()))
-                .willReturn(Optional.empty());
+        final OrderRequest wrongOrderRequest = new OrderRequest(wrongOrderTableId,
+            List.of(new OrderLineItemRequest(savedMenu.getId(), 3)));
 
         // when
         // then
-        assertThatThrownBy(() -> orderService.create(wrongOrder))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> orderService.create(wrongOrderRequest))
+            .isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("주문 테이블이 비어있으면 주문을 생성할 수 없다.")
     @Test
     void create_order_fail_with_empty_orderTable() {
         // given
-        final List<OrderLineItem> orderLineItems = List.of(
-                FixtureFactory.savedOrderLineItem(1L, null, 1L, 1),
-                FixtureFactory.savedOrderLineItem(2L, null, 2L, 2));
-        final Order wrongOrder = FixtureFactory.forSaveOrder(1L, orderLineItems);
-
-        given(menuDao.countByIdIn(any()))
-                .willReturn(2L);
-
-        given(orderTableDao.findById(any()))
-                .willReturn(Optional.of(new OrderTable() {{
-                    setEmpty(true);
-                }}));
+        final OrderTable savedOrderTable = orderTableRepository.save(OrderTable.forSave(5));
+        savedOrderTable.changeEmptyStatus();
+        final List<OrderLineItemRequest> emptyOrderLineItemRequest = List.of();
+        final OrderRequest wrongOrderRequest = new OrderRequest(savedOrderTable.getId(),
+            emptyOrderLineItemRequest);
 
         // when
         // then
-        assertThatThrownBy(() -> orderService.create(wrongOrder))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> orderService.create(wrongOrderRequest))
+            .isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("전체 주문을 조회할 수 있다.")
     @Test
     void find_all_order() {
         // given
-        final List<OrderLineItem> savedorderLineItems1 = List.of(
-                FixtureFactory.savedOrderLineItem(1L, 1L, 1L, 1),
-                FixtureFactory.savedOrderLineItem(2L, 1L, 2L, 2));
-        final Order order1 = FixtureFactory.savedOrder(1L, 1L, OrderStatus.COOKING.name(), LocalDateTime.now(), savedorderLineItems1);
-
-        final List<OrderLineItem> savedorderLineItems2 = List.of(
-                FixtureFactory.savedOrderLineItem(3L, 2L, 3L, 1),
-                FixtureFactory.savedOrderLineItem(4L, 2L, 4L, 2));
-        final Order order2 = FixtureFactory.savedOrder(2L, 2L, OrderStatus.COOKING.name(), LocalDateTime.now(), savedorderLineItems2);
-
-        final List<Order> orders = List.of(order1, order2);
-
-        given(orderDao.findAll())
-                .willReturn(orders);
+        orderRepository.save(Order.forSave(1L));
+        orderRepository.save(Order.forSave(2L));
 
         // when
-        final List<Order> result = orderService.list();
+        final List<OrderResponse> result = orderService.list();
 
         // then
-        assertThat(result).usingRecursiveComparison()
-                .isEqualTo(orders);
+        assertThat(result).hasSize(2);
     }
 
     @DisplayName("주문 상태를 변경할 수 있다.")
     @Test
     void change_order_status() {
         // given
-        final List<OrderLineItem> savedOrderLineItems = List.of(
-                FixtureFactory.savedOrderLineItem(1L, 1L, 1L, 1),
-                FixtureFactory.savedOrderLineItem(2L, 1L, 2L, 2));
-        final Order order = FixtureFactory.savedOrder(1L, 1L, OrderStatus.COOKING.name(), LocalDateTime.now(), savedOrderLineItems);
-
-        final Order changeOrder = FixtureFactory.savedOrder(1L, 1L, OrderStatus.COMPLETION.name(), LocalDateTime.now(), savedOrderLineItems);
-
-        given(orderDao.findById(any()))
-                .willReturn(Optional.of(order));
+        final Order order = Order.forSave(1L);
+        orderRepository.save(order);
+        final OrderStatusChangeRequest request = new OrderStatusChangeRequest(OrderStatus.COMPLETION.name());
 
         // when
-        final Order result = orderService.changeOrderStatus(order.getId(), changeOrder);
+        final OrderResponse result = orderService.changeOrderStatus(order.getId(), request);
 
         // then
         assertSoftly(softly -> {
             softly.assertThat(result.getId()).isEqualTo(order.getId());
-            softly.assertThat(result.getOrderedTime()).isEqualTo(order.getOrderedTime());
-            softly.assertThat(result.getOrderStatus()).isEqualTo(order.getOrderStatus());
-            softly.assertThat(result.getOrderLineItems()).isEqualTo(order.getOrderLineItems());
-            softly.assertThat(result.getOrderTableId()).isEqualTo(order.getOrderTableId());
+            softly.assertThat(result.getOrderStatus()).isEqualTo(result.getOrderStatus());
         });
     }
 
@@ -215,37 +176,27 @@ class OrderServiceTest {
     void change_order_fail_with_not_found_order() {
         // given
         final Long wrongOrderId = 0L;
-        final List<OrderLineItem> savedOrderLineItems = List.of(
-                FixtureFactory.savedOrderLineItem(1L, 1L, 1L, 1),
-                FixtureFactory.savedOrderLineItem(2L, 1L, 2L, 2));
-        final Order changeOrder = FixtureFactory.savedOrder(1L, 1L, OrderStatus.COMPLETION.name(), LocalDateTime.now(), savedOrderLineItems);
-
-        given(orderDao.findById(any()))
-                .willReturn(Optional.empty());
+        final OrderStatusChangeRequest request = new OrderStatusChangeRequest(OrderStatus.COOKING.name());
 
         // when
         // then
-        assertThatThrownBy(() -> orderService.changeOrderStatus(wrongOrderId, changeOrder))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> orderService.changeOrderStatus(wrongOrderId, request))
+            .isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("주문 상태가 COMPLETION이면 주문 상태를 변경할 수 없다.")
     @Test
     void change_order_fail_with_completion_order() {
         // given
-        final List<OrderLineItem> savedOrderLineItems = List.of(
-                FixtureFactory.savedOrderLineItem(1L, 1L, 1L, 1),
-                FixtureFactory.savedOrderLineItem(2L, 1L, 2L, 2));
-        final Order complitedOrder = FixtureFactory.savedOrder(1L, 1L, OrderStatus.COMPLETION.name(), LocalDateTime.now(), savedOrderLineItems);
+        final Order order = Order.forSave(1L);
+        order.changeStatus(OrderStatus.COMPLETION.name());
+        orderRepository.save(order);
 
-        final Order changeOrder = FixtureFactory.savedOrder(1L, 1L, OrderStatus.COMPLETION.name(), LocalDateTime.now(), savedOrderLineItems);
-
-        given(orderDao.findById(any()))
-                .willReturn(Optional.of(complitedOrder));
+        final OrderStatusChangeRequest request = new OrderStatusChangeRequest(OrderStatus.COOKING.name());
 
         // when
         // then
-        assertThatThrownBy(() -> orderService.changeOrderStatus(complitedOrder.getId(), changeOrder))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> orderService.changeOrderStatus(order.getId(), request))
+            .isInstanceOf(IllegalArgumentException.class);
     }
 }
